tests/fixtures/invalid/bytes_le_int.py
# Cannot compare with <= Bytes and Int
x: bool = b"hello" <= 1
